# CopyCat

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  CopyCat.py  CopyCat.spec  CopyCat_GUI.py  CopyCat_Web.py  CopyCat_Web.spec  Dockerfile  LICENSE  README.md  README_GER.md  _patch_giturl.py  codecov.yml  corrupt.xml  cov_full.txt  cov_full2.txt  cov_out.txt  cov_output.txt  cov_output2.txt  cov_output3.txt  find_ideas.py  full_test_output.txt  mypy_out.txt  mypy_strict.txt  pyproject.toml  test_copycat.py  test_out.txt
.github/workflows/: ci.yml
Information/: CopyCat v2.9 – Projektübersicht.txt  CopyCat v3.0 – Projektübersicht.txt  Entwicklungsplan.md  Test_    Meilenstein-Erklärungen.md
Test_Set/: Test_komplex.drawio  Test_leer.drawio  Test_minimal-cell - Kopie.drawio  Test_multi-model - Kopie.drawio  Test_py.py  Test_zip-archive - Kopie.drawio
copycat/: __init__.py  cli.py  core.py  i18n.py
copycat-vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
copycat-vscode/src/: extension.test.ts  extension.ts
copycat-vscode/src/__mocks__/: vscode.ts
copycat/exporters/: ai.py  html.py  json_export.py  md.py  pdf.py  template.py  timeline.py  txt.py
copycat/extractors/: __init__.py  binary.py  csv_extractor.py  drawio.py  notebook.py
copycat/utils/: cache.py  files.py  git.py  plugins.py  search.py  stats.py
plugins/: example_proto.py
